--- a/example/browser/index.html
+++ b/example/browser/index.html
@@ -34,7 +34,7 @@
         </div>
       </div>
     </div>
-    <script src="../dist/pub-sub-store.umd.js"></script>
+    <script src="../../dist/pub-sub-store.umd.js"></script>
     <script src='./index.js'></script>
   </body>
 </html>
